[package]
name = "chloebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = ["cache", "framework", "standard_framework"] }
tokio = { version = "1.17", features = ["rt-multi-thread", "macros", "parking_lot"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.7"
anyhow = "1.0"
dirs = "4.0"
log = "0.4"
env_logger = "0.9"
rand = { version = "0.8", features = ["std_rng"] }